--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,16 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Jack Habit",
+  "name": "Jack Habit Journal",
+  "description": "This is your personal daily journaling app for the Jack Habit research.",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "logo64.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/png"
     },
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any maskable"
     },
     {
       "src": "logo512.png",
@@ -20,6 +23,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#d4bc33",
   "background_color": "#ffffff"
 }
