--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,20 +5,16 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "logo64.png",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/png"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
+      "src": "icons/manifest-icon-192.png",
       "sizes": "192x192",
-      "purpose": "any maskable"
+      "type": "image/png",
+      "purpose": "maskable any"
     },
     {
-      "src": "logo512.png",
+      "src": "icons/manifest-icon-512.png",
+      "sizes": "512x512",
       "type": "image/png",
-      "sizes": "512x512"
+      "purpose": "maskable any"
     }
   ],
   "start_url": ".",
