--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^8.6.3",
     "firebaseui": "^4.8.0",
     "react": "^17.0.2",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
