things are ready for sending to the database and confirming the user's day done

--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,8 @@
 {
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
   "hosting": {
     "public": "build",
     "ignore": [
@@ -14,12 +18,6 @@
     ]
   },
   "emulators": {
-    "firestore": {
-      "port": 8080
-    },
-    "database": {
-      "port": 9000
-    },
     "hosting": {
       "port": 5000
     },
