--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,7 +19,7 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#d4bc33",
+  "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "categories": [
     "research",
